# schedule-parser

./: .gitignore  Dockerfile  README.md  ScheduleParser.sln  pyproject.toml  s.json  schedule-parser.sln  server.py  setup.cfg
Parser/: IParserSettings.cs  IParserWorker.cs  Parser.csproj  ParserSettings.cs  ParserStates.cs  ParserWorker.cs
Parser/Core/: HtmlLoader.cs  HtmlParser.cs  IHtmlParser.cs  IParser.cs  IParserSettings.cs  LinksParser.cs  ParserStates.cs  TableLoader.cs  TablesDownloader.cs
ParserAPI/: ParserAPI.csproj  ParserStates.cs  Program.cs  appsettings.Development.json  appsettings.json  streamsinfo.json
ParserAPI/FileLogger/: FileLogger.cs  FileLoggerExtensions.cs  FileLoggerProvider.cs
ParserAPI/MailLogger/: MailLogger.cs  MailLoggerExtensions.cs  MailLoggerProvider.cs
ParserAPI/Models/: BaseResponseModel.cs
ParserAPI/Properties/: launchSettings.json
ParserDAL/: ParserDAL.csproj
ParserDAL/DataAccess/: ScheduleContext.cs
ParserDAL/Migrations/: 20220812120640_InitialCreate.Designer.cs  20220812120640_InitialCreate.cs  20220812122538_SwitchedToLowerCase.Designer.cs  20220812122538_SwitchedToLowerCase.cs  20220812130421_AddPrimaryKeys.Designer.cs  20220812130421_AddPrimaryKeys.cs  20221007221034_Switched tables names to lowercase.Designer.cs  20221007221034_Switched tables names to lowercase.cs  20221007223629_Switched tables names to lowercase 2.Designer.cs  ScheduleContextModelSnapshot.cs  (+1 more)
ParserTester/: ParserTester.csproj  Program.cs
database/: db.py
libtester/: Program.cs  libtester.csproj
parser/: Class1.cs  parser.py
(+49 files in other folders)
