[tool.poetry]
name = "schedule-parser"
version = "0.1.0"
description = ""
authors = ["3xiced <3xiced@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
autopep8 = "^1.6.0"
aiofile = "^3.7.4"
bs4 = "^0.0.1"
asyncio = "^3.4.3"
openpyxl = "^3.0.9"
asyncpg = "^0.25.0"
transliterate = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
